# bmstu_iu7_cgcp

./: .gitignore  CMakeLists.txt  README.md
docs/rpz/src/: 03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  biblio.bib  bmstu.cls  coursework.tex  diagram.drawio
docs/rpz/src/inc/lst/: build.sh
docs/summer_practice/src/: 00-title.tex  01-individual.tex  10-introduction.tex  20-analysis.tex  30-design.tex  40-technological.tex  50-conclusion.tex  90-sources.bib  main.tex
docs/technical_specification/: technical_specification.docx
src/: aabb.h  aarect.h  box.h  bvh.h  camera.h  color.cpp  color.h  hittable.h  hittable_list.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager_draw.cpp  manager_draw.h  material.h  ray.h  render_settings.h  rtweekend.h  scene.h  settings_render.h  sphere.h  texture.h  util.h  vec3.h
test/: time_mea.cpp
widgets/: ColorPicker.cpp  ColorPicker.h
